mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_missing_return_empty.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Function must return a value of type 'int' on all code paths
--> test_scripts/error_cases/semantic_missing_return_empty.mux:1:1
   |
 1 | func foo() returns int {
   | ^^^^
   |
= help: Add a return statement at the end of every branch (if/else, match, etc.)
